gccida/g0/try_split
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/try_split/src/emit-rtl.c:3559:4: error: expected ';' after expression
rtx insn; // [rsp+20h] [rbp-70h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/try_split/src/emit-rtl.c:3559:5: error: use of undeclared identifier 'insn'
rtx insn; // [rsp+20h] [rbp-70h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/try_split/src/emit-rtl.c:3560:4: error: expected ';' after expression
rtx insn_0; // [rsp+28h] [rbp-68h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/try_split/src/emit-rtl.c:3560:5: error: use of undeclared identifier 'insn_0'
rtx insn_0; // [rsp+28h] [rbp-68h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/try_split/src/emit-rtl.c:3561:4: error: expected ';' after expression
rtx insn_1; // [rsp+30h] [rbp-60h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/try_split/src/emit-rtl.c:3561:5: error: use of undeclared identifier 'insn_1'
rtx insn_1; // [rsp+30h] [rbp-60h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/try_split/src/emit-rtl.c:3562:4: error: expected ';' after expression
rtx insn_2; // [rsp+38h] [rbp-58h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/try_split/src/emit-rtl.c:3562:5: error: use of undeclared identifier 'insn_2'
rtx insn_2; // [rsp+38h] [rbp-58h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/try_split/src/emit-rtl.c:3563:4: error: expected ';' after expression
rtx seq; // [rsp+40h] [rbp-50h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/try_split/src/emit-rtl.c:3563:5: error: use of undeclared identifier 'seq'
rtx seq; // [rsp+40h] [rbp-50h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/try_split/src/emit-rtl.c:3565:4: error: expected ';' after expression
rtx before; // [rsp+50h] [rbp-40h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/try_split/src/emit-rtl.c:3565:5: error: use of undeclared identifier 'before'
rtx before; // [rsp+50h] [rbp-40h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/try_split/src/emit-rtl.c:3574:4: error: expected ';' after expression
rtx note; // [rsp+60h] [rbp-30h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/try_split/src/emit-rtl.c:3574:5: error: use of undeclared identifier 'note'; did you mean 'none'?
rtx note; // [rsp+60h] [rbp-30h] 
    ^~~~
    none
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/try_split/src/expr.h:119:17: note: 'none' declared here
enum direction {none, upward, downward};  /* Value has this type.  */
                ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/try_split/src/emit-rtl.c:3575:4: error: expected ';' after expression
rtx notea; // [rsp+60h] [rbp-30h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/try_split/src/emit-rtl.c:3575:5: error: use of undeclared identifier 'notea'
rtx notea; // [rsp+60h] [rbp-30h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/try_split/src/emit-rtl.c:3577:4: error: expected ';' after expression
rtx tema; // [rsp+68h] [rbp-28h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/try_split/src/emit-rtl.c:3577:5: error: use of undeclared identifier 'tema'; did you mean 'tem'?
rtx tema; // [rsp+68h] [rbp-28h] 
    ^~~~
    tem
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/try_split/src/emit-rtl.c:3576:18: note: 'tem' declared here
 struct rtx_def *tem; // [rsp+68h] [rbp-28h] 
                 ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/try_split/src/emit-rtl.c:3579:4: error: expected ';' after expression
rtx after; // [rsp+78h] [rbp-18h] 
   ^
   ;
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/try_split/src/obj/emit-rtl.o] Error 1
